fade-zoom-slider plugin

--- a/plugins/fade-zoom-slider/src/style.scss
+++ b/plugins/fade-zoom-slider/src/style.scss
@@ -6,7 +6,7 @@
  */
 
 .wp-block-wp-fade-zoom-slider {
-	background-color: #21759b;
+	// background-color: #21759b;
 	color: #fff;
 	padding: 2px;
 }
