fade-zoom-slider plugin

--- a/plugins/fade-zoom-slider/src/editor.scss
+++ b/plugins/fade-zoom-slider/src/editor.scss
@@ -9,4 +9,10 @@
 	.slide {
 		opacity: 1;
 	}
+	.remove-fade-slider-img.is-destructive {
+		position: absolute;
+		bottom: 1em;
+		right: 1em;
+		background-color: rgba(244, 70, 70, 0.544);
+	}
 }
